  * Force LANG/LC_ALL=C in linux/sensors_, to remove problems in parsing of
    sensors output (SF#972749, SF#972748, Deb#255312).
  * linux/sensors_temp now understand temp lines without hyst or max settings
    (Deb#256380).
  * Made linux/sensors_volt work with negative voltages (Deb#256734).
  * Made generic/hddtemp2 understand environment variables with quotes
    (Deb#265022).

munin (1.1.2)

  * The server programs now open the log file at an earlier point.
  * Munin-limits added to distro.
  * Warnings and criticals now show up in nodeview and overview.
  * Makefile no longer stopping when complaining about htmldoc errors
  * Added contributed plugin generic/cupsys_pages, contributed by Rune N.
    Skillingstad.
  * Minor documentation bugfix.
  * Added automatic "graph no" to negative field when using negatives.
  * Added options to munin-graph to skip locking and stats generation.
  * Added --cron option to munin-graph. This is used internally for 
    special case checking when run from cron.
  * Added dist-directory for Solaris packages.
  * Created munin-cgi-graph, which creates dynamic graphs. 
  * Added munin.conf option "graph_strategy (cgi|cron)" which defaults to
    cron.
  * Bugfix in cdef calculations.

munin (1.1.1)

  * Added a table in the service view page, with information about each 
    field.
  * Added plugin options "graph_info" and "<field>.info", which can be used
    to describe the graph/fields in the above mentioned table.
  * Bugfix in the linux/df_inode plugin, regarding filesystems withouth
    inodes.
  * Added warning and critical statuses to the info table in the service view.
  * Added "info"-fields to linux/cpu and linux/load plugins, to demonstrate
    how it works.
  * Linux/ip_ wildcard plugin contributed by Mathy Vanvoorden (SF#954851).
  * Added a definition file (definitions.html) to the server distribution.
  * Use "sed 1d" instead of "tail +2" in df plugins (patch by Olivier
    Delhomme).